CICD: 젠킨스에서 deploy 브랜치 테스트 * 테스트 리포트 기록용.